--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,98 @@
-version: "3.7"
 services:
   postgres:
-    image: postgres:14
+    image: postgres:18
+    container_name: postgres
     ports:
       - "5432:5432"
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB_NAME}
+    volumes:
+      - ./docker/postgres/init:/docker-entrypoint-initdb.d
+    networks:
+      - yape-network
   zookeeper:
-    image: confluentinc/cp-zookeeper:5.5.3
+    image: confluentinc/cp-zookeeper:7.7.7
+    container_name: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
+    networks:
+      - yape-network
   kafka:
-    image: confluentinc/cp-enterprise-kafka:5.5.3
+    image: confluentinc/cp-enterprise-kafka:7.7.7
+    container_name: kafka
     depends_on: [zookeeper]
     environment:
       KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://kafka:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_BROKER_ID: 1
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_JMX_PORT: 9991
+      KAFKA_CREATE_TOPICS: "event:1:1,event-response:1:1"
     ports:
       - 9092:9092
+      - 29092:29092
+    networks:
+      - yape-network
+  cassandra:
+    image: cassandra:5.0
+    container_name: cassandra
+    ports:
+      - "9042:9042"
+    environment:
+      CASSANDRA_CLUSTER_NAME: "yape-challenge-cluster"
+      CASSANDRA_DC: dc1
+      CASSANDRA_ENDPOINT_SNITCH: GossipingPropertyFileSnitch
+      CASSANDRA_NUM_TOKENS: 1
+      CASSANDRA_RACK: rack1
+    healthcheck:
+      test: ["CMD-SHELL", "cqlsh localhost 9042 -e 'DESCRIBE KEYSPACES'"]
+      interval: 30s
+      timeout: 10s
+      retries: 10
+    networks:
+      - yape-network
+  cassandra-baseline:
+    image: cassandra:5.0
+    container_name: cassandra-baseline
+    depends_on:
+      cassandra:
+        condition: service_healthy
+    volumes:
+      - ./docker/cassandra/init/baseline.cql:/baseline.cql
+    command: /bin/bash -c "echo loading cassandra keyspace && cqlsh cassandra -f /baseline.cql && echo done"
+    networks:
+      - yape-network  
+  redis:
+    image: redis:8.4
+    container_name: redis
+    ports:
+      - "6379:6379"
+    networks:
+      - yape-network
+  antifraud:
+    build:
+      dockerfile: ./Dockerfile.antifraud
+    container_name: antifraud
+    depends_on:
+      cassandra-baseline:
+        condition: service_completed_successfully
+    ports:
+      - "8081:8081"
+    networks:
+      - yape-network
+  transaction:
+    build:
+      dockerfile: ./Dockerfile.transaction
+    container_name: transaction
+    depends_on:
+      cassandra-baseline:
+        condition: service_completed_successfully
+    ports:
+      - "8082:8082"
+    networks:
+      - yape-network
+networks:
+  yape-network:
+    driver: bridge
